--- a/frontend/src/components/Shop/UI/ShopInput.scss
+++ b/frontend/src/components/Shop/UI/ShopInput.scss
@@ -12,5 +12,6 @@
     border: 1px solid #ccc;
     padding: 1rem;
     border-radius: 6px;
+    margin-bottom: 0.5rem;
   }
 }
